[style]軽微な見た目調整

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,6 +24,7 @@ const { href, title, body } = Astro.props;
 		list-style: none;
 		display: flex;
 		padding: 0.15rem;
+		margin: 1rem;
 		background-color: white;
 		background-image: var(--accent-gradient);
 		background-size: 400%;
